@@ -1,3 +1,7 @@
+2011-02-11  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* unbuffered.c (main): usage made better
+
 2009-07-02  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* unbuffered.c (unbuffered): Fix if catting: Do not output
